--- a/redirect-live/now.json
+++ b/redirect-live/now.json
@@ -12,7 +12,7 @@
       "src": "/(.*)",
       "status": 301,
       "headers": {
-        "Location": "https://www.youtube.com/watch?v=BvmjgqO-tcg"
+        "Location": "https://www.youtube.com/watch?v=h4N6eS14sJs"
       }
     }
   ]
